--- a/.github/workflows/atualiza-readme.yml
+++ b/.github/workflows/atualiza-readme.yml
@@ -8,7 +8,13 @@ jobs:
   atualiza_o_readme:
     name: Atualiza o README.md
     runs-on: ubuntu-22.04
+
     steps:
+    - name: Faz o clone do repositorio (e seus arquivos) na maquina do GHA
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
       env:
@@ -16,6 +22,14 @@ jobs:
       with:
         tinytex: true 
   
+    - name: Render README.qmd and Commit Results
+        run: |
+          quarto render README.qmd
+          git config --local user.name "$GITHUB_ACTOR"
+          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git commit . -m 'Re-build Rmarkdown files' || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
+
     # - name: atualiza o README.md
     # - run: ...
   
