--- a/.github/workflows/atualiza-readme.yml
+++ b/.github/workflows/atualiza-readme.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Install libcurl4-openssl-dev
+      run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
+
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
       env:
