--- a/.github/workflows/atualiza-readme.yml
+++ b/.github/workflows/atualiza-readme.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Install libcurl4-openssl-dev
       run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
 
+    - name: Setup R
+      uses: r-lib/actions/setup-r@v2
+      
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
       env:
