ubuntu-latest no yml

--- a/.github/workflows/atualiza-readme.yml
+++ b/.github/workflows/atualiza-readme.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   atualiza_o_readme:
     name: Atualiza o README.md
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Faz o clone do repositorio na maquina do GHA
