--- a/.github/workflows/atualiza-readme.yml
+++ b/.github/workflows/atualiza-readme.yml
@@ -45,7 +45,7 @@ jobs:
         quarto render README.qmd
         git config --local user.name "$GITHUB_ACTOR"
         git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-        git commit README.qmd -m 'Re-build Rmarkdown files' || echo "No changes to commit"
+        git commit README.md -m 'Re-build Rmarkdown files' || echo "No changes to commit"
         git push origin || echo "No changes to commit"
 
     # - name: atualiza o README.md
