permissions:       contents: write

--- a/.github/workflows/atualiza-readme.yml
+++ b/.github/workflows/atualiza-readme.yml
@@ -10,6 +10,8 @@ jobs:
   atualiza_o_readme:
     name: Atualiza o README.md
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Faz o clone do repositorio na maquina do GHA
